resolve annoying issue with added width on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@ body {
     font-family: 'PT Sans', sans-serif;
 }
 
+body, html, main, section {
+    width: 100vw;
+    min-width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 h1, h2, h3, h4, h5 , h6 {
     font-family: 'Montserrat', sans-serif;
 }
